<?xml version="1.0"?>
<package format="2">
  <name>lvio_fusion</name>
  <version>0.0.0</version>
  <description>The lvio_fusion package</description>

  <maintainer email="jypjypjypjyp@hotmail.com">jyp</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
