<?xml version="1.0"?>
<package format="2">
  <name>navigation_node</name>
  <version>0.0.0</version>
  <description>The navigation_node package</description>

  <maintainer email="1192328674@qq.com">zoet</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>


  <export>

  </export>
</package>
