<?xml version="1.0"?>
<package format="2">
  <name>object_detector</name>
  <version>0.1.0</version>
  <description>The YOLOv3 PyTorch ROS wrapper package</description>

  <maintainer email="jypjypjypjyp@hotmail.com">jyp</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_runtime</depend>

</package>
