<?xml version="1.0"?>
<package format="2">
  <name>rl_fusion</name>
  <version>0.1.0</version>
  <description>reinforcement learning for adaptive fusion</description>

  <maintainer email="jypjypjypjyp@hotmail.com">jyp</maintainer>

  <author email="jypjypjypjyp@hotmail.com">jyp</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
