<?xml version="1.0"?>
<package format="2">
  <name>rl_fusion</name>
  <version>0.1.0</version>
  <description>reinforcement learning for adaptive fusion</description>

  <maintainer email="jypjypjypjyp@hotmail.com">jyp</maintainer>

  <author email="jypjypjypjyp@hotmail.com">jyp</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>lvio_fusion_node</depend>

</package>
